--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-      <div>
-        <input type="text" id="search-bar" />
-        <i data-feather="search" id="search-i"></i>
-      </div>
+      <!-- <div> -->
+      <input type="text" id="search-bar" />
+      <i data-feather="search" id="search-i"></i>
+      <!-- </div> -->
     </header>
     <main>
       <section class="inventory-display">
