--- a/index.html
+++ b/index.html
@@ -23,12 +23,22 @@
       <button id="editContextBtn">Edit item</button
       ><button id="deleteContextBtn">Delete item</button>
     </div>
-    <div id="addmenu">
-      <form action="">
+    <div id="addmenu" style="display: none">
+      <form id="add-form">
         <div class="form-group">
           <label for="itemname">name</label>
           <input type="text" id="itemname" required />
         </div>
+        <div class="form-group">
+          <label for="itemquantity">quantity</label>
+          <input type="number" id="itemquantity" required />
+        </div>
+        <div class="form-group">
+          <label for="itemcategory">category</label>
+          <input type="text" id="itemcategory" required />
+        </div>
+        <button id="addsum" type="submit">submit?</button>
+        <p>no cancle button, no budget. just click outside this window pls</p>
       </form>
     </div>
     <nav>
