--- a/index.html
+++ b/index.html
@@ -23,23 +23,25 @@
       <button id="editContextBtn">Edit item</button
       ><button id="deleteContextBtn">Delete item</button>
     </div>
-    <div id="addmenu" style="display: none">
-      <form id="add-form">
-        <div class="form-group">
-          <label for="itemname">name</label>
-          <input type="text" id="itemname" required />
-        </div>
-        <div class="form-group">
-          <label for="itemquantity">quantity</label>
-          <input type="number" id="itemquantity" required />
-        </div>
-        <div class="form-group">
-          <label for="itemcategory">category</label>
-          <input type="text" id="itemcategory" required />
-        </div>
-        <button id="addsum" type="submit">submit?</button>
-        <p>no cancle button, no budget. just click outside this window pls</p>
-      </form>
+    <div id="modal-overlay" style="display: none">
+      <div id="addmenu">
+        <form id="add-form">
+          <div class="form-group">
+            <label for="itemname">name</label>
+            <input type="text" id="itemname" required />
+          </div>
+          <div class="form-group">
+            <label for="itemquantity">quantity</label>
+            <input type="number" id="itemquantity" required />
+          </div>
+          <div class="form-group">
+            <label for="itemcategory">category</label>
+            <input type="text" id="itemcategory" required />
+          </div>
+          <button id="addsum" type="submit">submit?</button>
+          <p>no cancle button, no budget. just click outside this window pls</p>
+        </form>
+      </div>
     </div>
     <nav>
       <a href="#"><i data-feather="home"></i></a>
