--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Inventory Tracker</title>
+
+    <!-- link to CSS -->
     <link rel="stylesheet" href="sigma.css" />
+
+    <!-- link to feather-icons -->
     <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
     <header>
-      <!-- <div> -->
       <input type="text" id="search-bar" />
       <i data-feather="search" id="search-i"></i>
-      <!-- </div> -->
     </header>
     <main>
       <section class="inventory-display">
         <div class="inventory-grid" id="inventoryGrid"></div>
       </section>
     </main>
-    <div id="contextMenu" class="context-menu" style="display: none">
-      <button id="editContextBtn">Edit item</button
-      ><button id="deleteContextBtn">Delete item</button>
-    </div>
+    <nav>
+      <a href="#"><i data-feather="home"></i></a>
+      <a href="#" id="addd"><i data-feather="plus-circle"></i></a>
+      <a href="#" id="trashh"><i data-feather="trash-2"></i></a>
+    </nav>
+
+    <!-- parts that are not visible on load -->
+
+    <!-- context menu -->
+    <div id="contextMenu" class="context-menu" style="display: none"><button id="editContextBtn">Edit item</button><button id="deleteContextBtn">Delete item</button></div>
+
+    <!-- modal -->
     <div id="modal-overlay" style="display: none">
       <div id="addmenu">
         <form id="add-form">
@@ -43,14 +53,13 @@
         </form>
       </div>
     </div>
-    <nav>
-      <a href="#"><i data-feather="home"></i></a>
-      <a href="#" id="addd"><i data-feather="plus-circle"></i></a>
-      <a href="#" id="trashh"><i data-feather="trash-2"></i></a>
-    </nav>
+
+    <!-- feather-icons script -->
     <script>
       feather.replace();
     </script>
+
+    <!-- run the javascript -->
     <script src="script.js"></script>
   </body>
 </html>
