- overflowing page width FIXED - rapihin dan efisiensi styling - wrap header i with a tag, id changed to search-btn in HTML and JS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <input type="text" id="search-bar" />
-      <i data-feather="search" id="search-i"></i>
+      <a href="#" id="search-btn"><i data-feather="search"></i></a>
     </header>
     <main>
       <section class="inventory-display">
