Add item generally bisa (belum folder, upload image). Next: localStorage to sore the changes.

--- a/index.html
+++ b/index.html
@@ -96,12 +96,11 @@
             <div class="catWrapper">
               <input
                 type="text"
-                id="categoryInput"
-                placeholder="add new category"
-                style="display: none"
+                id="itemcategory"
+                placeholder="typecat"
                 required
               />
-              <div class="suggestions"></div>
+              <div class="suggestions" id="suggestions"></div>
             </div>
           </div>
           <div class="btn-row">
