--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       />
       <a href="#" id="search-btn"><i data-feather="search"></i></a>
     </header>
+
     <main>
+      <div id="breadcrumb"></div>
       <section class="inventory-display">
         <div class="inventory-grid" id="inventoryGrid"></div>
       </section>
