fix yes now work add thingi yes

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             <label for="itemname">name</label>
             <input type="text" id="itemname" required />
           </div>
-          <div class="form-group">
+          <div class="form-group" id="quantityRow">
             <label for="itemquantity">quantity</label>
             <input type="number" id="itemquantity" required />
           </div>
-          <div class="form-group">
+          <div class="form-group" id="categoryRow">
             <label for="itemcategory">category</label>
             <div class="catWrapper">
               <input
